data/all_generated_tests/raw_wast_tests/br_table_StackCorruption_2072.wast
;; 2. **Test: Empty Label Vector with Default Only**    - **Description:** Use a `br_table` with an empty label vector and only a default label.    - **Constraint:** Validation and branching should correctly handle the absence of other labels.    - **Relation to Stack Corruption:** Tests proper stack unwinding and control flow when no alternative labels are present.

(assert_invalid
  (module
    (func $empty-label-vector-default-only
      (block $l1 (result i32)
        (br_table 0 (i32.const 1))
      )
      (i32.eqz) (drop)
    )
  )
  "type mismatch"
)